# opentx

companion/: README.qt5
companion/src/: CMakeLists.txt  apppreferencesdialog.cpp  burnconfigdialog.h  companion.cpp  comparedialog.h  customizesplashdialog.h  eeprominterface.cpp  flasheepromdialog.h  flashfirmwaredialog.h  helpers.cpp  helpers.h  logsdialog.cpp  logsdialog.h  mainwindow.cpp  mainwindow.h  modelprinter.cpp  modelslist.cpp  printdialog.cpp  printdialog.h  simulator.cpp  splashlabel.h  splashlibrary.cpp  wizarddialog.cpp
companion/src/firmwares/er9x/: er9xinterface.cpp
companion/src/firmwares/ersky9x/: ersky9xinterface.cpp
companion/src/firmwares/opentx/simulator/: opentxsimulator.cpp
companion/src/generaledit/: CMakeLists.txt  generaledit.cpp  generalsetup.cpp
companion/src/modeledit/: CMakeLists.txt  channels.cpp  curves.cpp  customfunctions.cpp  expodialog.cpp  flightmodes.cpp  inputs.cpp  logicalswitches.cpp  mixerdialog.cpp  mixerslist.h  node.h  setup.cpp  telemetry.cpp
companion/src/qcustomplot/: CMakeLists.txt
companion/src/shared/: CMakeLists.txt  autolineedit.h
companion/src/simulation/: CMakeLists.txt  cursorwidget.h  debugoutput.cpp  joystick.cpp  joystickdialog.cpp  menuwidget.h  myslider.h  xcursorwidget.h  xmenuwidget.h
